# wrk-runner

./: .bandit  .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: PERFORMANCE_TEST.md  index.md
examples/: README.md  advanced_config.json  get_with_params.lua  performance_config.json  post_login.lua
examples/scripts/: detailed.lua
src/wrk_runner/: __init__.py
src/wrk_runner/cli/: __init__.py  main.py
src/wrk_runner/core/: __init__.py  config.py  models.py  parser.py  tester.py
src/wrk_runner/utils/: __init__.py  output.py
src/wrk_runner/visualization/: __init__.py  charts.py
tests/: __init__.py  test_charts.py  test_config.py  test_models.py  test_output.py  test_parser.py  test_tester.py
